# couplefins

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  alembic.ini  pyproject.toml
.claude/: settings.json
.claude/agents/: architecture-guardian.md  test-pyramid-architect.md
.claude/rules/: application-patterns.md  code-quality.md  domain-purity.md  infrastructure-patterns.md  interface-patterns.md  submodule-protection.md  test-patterns.md  web-design-system.md
alembic/: env.py
alembic/versions/: 9e733c929b4e_initial_schema.py  b7f2a1c3d4e5_idempotent_uploads.py  c8a3b2d5e6f7_add_occurrence_to_natural_key.py  d9e4f5a6b7c8_nullable_category_mapping_group_id.py  e1f2g3h4i5j6_add_transaction_edits.py  f2a3b4c5d6e7_add_icon_to_category_groups.py
docs/: domain.md  ui-identity.md  user-flows.md
docs/backlog/: README.md  unscheduled.md  v0.1.x.md  v0.2.x.md  v0.3.x.md  v0.4.x.md  v0.5.x.md  v0.6.x.md  v0.7.x.md  v0.8.x.md  v0.9.x.md
docs/backlog/completed/: v0.2.x.md  v0.3.x.md  v0.4.x.md
docs/completed/: README.md
src/application/: runner.py
src/application/use_cases/: bulk_update_mappings.py  create_category_group.py  create_person.py  delete_budget.py  delete_category_group.py  export_adjustments.py  finalize_period.py  get_budget_overview.py  get_dashboard.py  get_reconciliation.py  get_transaction_edits.py  list_budgets.py  list_category_groups.py  list_persons.py  list_unmapped_categories.py  preview_csv.py  save_budget.py  seed_category_groups.py  setup_couple.py  unfinalize_period.py  update_budget.py  update_category_group.py  update_person.py  update_transaction.py  update_transaction_splits.py  upload_csv.py
src/config/: constants.py  logging.py  settings.py
src/domain/: budget.py  categories.py  constants.py  dedup.py  exceptions.py  reconciliation.py  splits.py
src/domain/entities/: __init__.py  category_group.py  category_group_budget.py  category_mapping.py  person.py  reconciliation_period.py  transaction.py  transaction_edit.py  upload.py
src/domain/export/: adjustments.py  csv_renderer.py
src/domain/parsing/: monarch_csv.py
src/domain/repositories/: category_group_budget_repository.py  category_group_repository.py  category_mapping_repository.py  person_repository.py  reconciliation_period_repository.py  transaction_edit_repository.py  transaction_repository.py  unit_of_work.py  upload_repository.py
src/interface/api/: app.py  middleware.py
tests/: conftest.py
tests/fixtures/: factories.py  mocks.py
tests/integration/: conftest.py
tests/integration/api/: test_budgets.py  test_category_groups.py  test_dashboard.py  test_export.py  test_finalization.py  test_health.py  test_persons.py  test_reconciliation.py  test_transaction_edits.py  test_transaction_splits.py  test_uploads.py
tests/integration/repositories/: test_person_repository.py  test_transaction_repository.py  test_upload_repository.py
tests/unit/application/: test_bulk_update_mappings.py  test_create_category_group.py  test_create_person.py  test_delete_budget.py  test_delete_category_group.py  test_export_adjustments.py  test_finalization_guard.py  test_finalize_period.py  test_get_budget_overview.py  test_get_dashboard.py  test_get_reconciliation.py  test_get_transaction_edits.py  test_list_category_groups.py  test_list_persons.py  test_list_unmapped_categories.py  test_preview_csv.py  test_save_budget.py  test_seed_category_groups.py  test_setup_couple.py  test_shared_transactions.py  test_unfinalize_period.py  test_update_budget.py  test_update_category_group.py  test_update_person.py  test_update_transaction.py  test_update_transaction_splits.py  test_upload_csv.py
tests/unit/domain/: test_adjustments.py  test_budget.py  test_csv_renderer.py  test_dedup.py  test_monarch_csv_parser.py  test_reconciliation.py  test_transaction.py
web/: biome.json  index.html  orval.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
web/src/: App.test.tsx  App.tsx  app.css  main.tsx
web/src/api/: client.ts  query-client.ts
web/src/components/: AdjustmentExportSection.test.tsx  AdjustmentExportSection.tsx  Button.tsx  CategoryMappingEditor.test.tsx  CategoryMappingEditor.tsx  DateRangePicker.tsx  FinalizationBanner.test.tsx  FinalizationBanner.tsx  MonthSelector.test.tsx  MonthSelector.tsx  NavItem.test.tsx  NavItem.tsx  PageStates.test.tsx  PageStates.tsx  PersonAccountSettings.tsx  SettlementCard.tsx  (+10 more)
(+77 files in other folders)
